# voxel

./: .gitignore  CMakeLists.txt  pre-run.sh
assets/: block-tex-template.dds  dirt.dds  font.dds  grass-side.dds  grass-top.dds  grass.dds  stone.dds  test.dds
shaders/: cube-shader.frag  cube-shader.vert  depth-shader.vert  skybox-shader.frag
src/: main.cpp
src/render/: camera.cpp  camera.h  cube-shader.frag  gl-buffer.cpp  gl-buffer.h  gui.cpp  gui.h  line-shader.vert  mesh-context.cpp  mesh-context.h  renderer.cpp  renderer.h  shader.frag  shader.vert  texture-manager.cpp  texture-manager.h
src/render/gl/: gl-buffer.cpp  gl-buffer.h  gl-shader.cpp  gl-shader.h  gl-vao.cpp  gl-vao.h
src/render/shaders/: cube-shader.frag  cube-shader.vert  line-shader.frag  line-shader.vert  skybox-shader.frag  skybox-shader.vert  text-shader.frag  text-shader.vert
src/utils/: cube-array.h  key-manager.cpp  key-manager.h  size.cpp  size.h  vec.cpp  vec.h
src/voxel/: block.h  world-gen.cpp  world-gen.h
src/voxel/block/: block.h  face.h
src/voxel/chunk/: chunk-manager.cpp  chunk-manager.h  chunk.cpp  chunk.h
